src/scss/components/content/_unit.scss
/* ... */
.unit__supports_language_sv {
  @include font-size(13px, 24px);
  background-color: $color-summer;
  border-radius: $spacing;
  display: inline-block;
  padding-bottom: $spacing-quarter;
  padding-left: $spacing-and-half;
  padding-right: $spacing-and-half;
  padding-top: $spacing-quarter;

  .unit--full & {
    margin-bottom: $spacing-and-half;

    @include breakpoint($breakpoint-m) {
      margin-bottom: $spacing-double;
    }
  }
}

.unit.unit--teaser {
  align-items: flex-start;
  background-color: $color-white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: $spacing-and-half;
  position: relative;

  @include breakpoint($breakpoint-m) {
    align-items: stretch;
    flex-direction: row;
    margin-bottom: $spacing;
    min-height: 220px; // From designs.
    padding-left: 325px; // Width of the unit picture from the designs + spacing
  }

  .views-row:last-child & {
    margin-bottom: 0;
  }

  .unit__image {
    background-color: var(--hdbt-color-palette--primary);
    color: var(--hdbt-color-palette-text--primary);
    margin: 0;
    overflow: hidden;

    @include breakpoint($breakpoint-m) {
      height: 100%;
      left: 0;
      margin: 0;
      position: absolute;
      top: 0;
      width: 325px;
    }

    img {
      @include breakpoint($breakpoint-m) {
        height: 100%;
        object-fit: cover;
        width: 100%;
      }
    }
  }

  .unit__image--placeholder {
    width: calc(100% + #{$spacing-and-half} + #{$spacing-and-half});

    @include breakpoint($breakpoint-m) {
      align-items: center;
      display: flex;
      width: 325px;
    }
  }

  .unit__text {
    margin-top: $spacing-double;
    padding: 0 $spacing-and-half $spacing-double;
    width: 100%;

    @include breakpoint($breakpoint-m) {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      margin-top: 0;
      padding: $spacing-double;
    }

    .unit__text__content {
      align-content: flex-start;

      @include breakpoint($breakpoint-m) {
        display: flex;
        flex-wrap: wrap;
        max-width: 530px;
      }
    }
  }

  .unit__link {
    text-decoration: none;

    &::after {
      bottom: 0;
      content: "";
      height: 100%;
      left: 0;
      position: absolute;
      right: 0;
      top: 0;
      width: 100%;
    }
  }

  .unit__title {
    @include font-size(24px, 28px);
    font-weight: 500;
    margin-bottom: $spacing-quarter;
    margin-top: 0;
    padding-right: $spacing-and-half;

    @include breakpoint($breakpoint-m) {
      @include font-size(32px, 37px);
      margin-bottom: 0;
      padding-right: 0;
      width: 100%;
    }
  }

  .unit__info {
    margin-top: $spacing-half;

    @include breakpoint($breakpoint-m) {
      width: 100%;
    }
  }

  .unit__info-row {
    @include font-size(18px, 26px);
    display: flex;
    margin-bottom: $spacing-and-half;

    @include breakpoint($breakpoint-m) {
      margin-bottom: $spacing;
    }

    &:last-child {
      margin-bottom: 0;
    }
  }

  .unit__info-row--address {
    @include breakpoint($breakpoint-m) {
      margin-bottom: $spacing-half;
    }

    .address {
      display: inline;
      margin-top: 0;

      .address-line1,
      .address-line2,
      .postal-code {
        margin-right: 3px; // Some spacing between the address parts when they are displayed inline.
      }

      .address-line1::after,
      .address-line2::after {
        content: ",";
        margin-left: -2px; // Because of display inline there is automatically some extra spacing. This removes it.
      }
    }
  }

  .unit__supports_language_sv {
    margin-top: $spacing;
  }

  .unit__read-more {
    display: flex;
    margin-top: $spacing-double;

    @include breakpoint($breakpoint-m) {
      justify-content: flex-end;
      margin-top: $spacing;
    }

    .unit__read-more__text {
      @include font-size(16px, 24px);
      font-weight: 500;
    }

    .icon {
      margin-left: $spacing-half;
    }
  }
}

// Sidebar layout.
// TODO: Clean up these styles after unit sidebar actually lives in sidebar as a block.
.enriched-content.has-sidebar {

  // With image.
  .list-of-links__item {
    @include breakpoint($breakpoint-l) {
      width: 33%;
    }

    .list-of-links__item__link {
      padding-bottom: $spacing-and-half;
    }
  }

  // Without image.
  .list-of-links--without-image {
    .list-of-links__item {
      @include breakpoint($breakpoint-l) {
        width: 50%;
      }
    }
  }

  .banner {
    margin-left: -$spacing-and-half;
    margin-right: -$spacing-and-half;

    @include breakpoint($breakpoint-l) {
      margin-left: auto;
      margin-right: auto;
    }
  }
}

